# NJU-CPL-Project

./: CMakeLists.txt  README.md
include/: break_the_record.h  common.h  game.h  lose.h  main.h  startup.h
src/: CMakeLists.txt  break_the_record.c  game.c  lose.c  main.c  startup.c
